get Candidate done
