# routes/user.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 const {register, login, forgotPassword, resetPassword, verify, resendOTP } = require('../controllers/userAuth')
-const {generateOtp, verifyVotingOtp, vote} = require('../controllers/vote')
+const {generateOtp, verifyVotingOtp, vote, getCandidates} = require('../controllers/vote')
 
 router.post('/register', register)
 router.post('/login', login)
@@ -12,6 +12,7 @@ router.post('/forgot-password', forgotPassword)
 router.post('/reset-password', resetPassword)
 router.post('/generate-voting-otp', generateOtp)
 router.post('/verify-voting-otp', verifyVotingOtp)
+router.get('/candidates', getCandidates)
 router.post('/vote', vote)
 
 module.exports = router;
